deployment/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app-db
  template:
    metadata:
      labels:
        app: simple-app-db
    spec:
      containers:
        - name: simple-app-db
          image: postgres:14.1-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgres/data
              name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim
