deployment/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-ui
spec:
  selector:
    matchLabels:
      app: simple-app-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: simple-app-ui
    spec:
      containers:
        - name: simple-app-ui
          image: simple-app-ui
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
