deployment/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-server
spec:
  selector:
    matchLabels:
      app: simple-app-server
  replicas: 2
  template:
    metadata:
      labels:
        app: simple-app-server
    spec:
      containers:
        - name: simple-app-server
          image: simple-app-server
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
