deployment/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-db-service
  labels:
    app: simple-app-db
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: simple-app-db
