deployment/fe-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-ui-service
spec:
  selector:
    app: simple-app-ui
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: LoadBalancer
