deployment/server-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-server-service
spec:
  type: ClusterIP
  selector:
    app: simple-app-server
  ports:
    - protocol: "TCP"
      port: 3000
      targetPort: 3000
