deployment/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress-service
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: simple-app-ui-service
                port:
                  number: 80
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: simple-app-server-service
                port:
                  number: 3000
